--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./src/css/global.css" />
     <link rel="stylesheet" href="./src/css/header.css" />
     <link rel="stylesheet" href="./src/css/animation/lang_menu.css" />
+    <link rel="stylesheet" href="./src/css/main.css" />
     <!-- javascript lib -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   </head>
@@ -47,9 +48,19 @@
         </div>
       </div>
     </div>
-    <div class="section-main container">
-      main
-      <div id="home" class="section-home">home</div>
+    <div class="section-main">
+      <div id="home" class="section-home">
+        <div class="section-home-video-container">
+          <video loop autoplay muted playisnline>
+            <source src="./assets/mainVid.mp4" />
+          </video>
+        </div>
+        <div class="main-content">
+          <div class="section-home-title">
+            <div class="section-home-title-top">Expose Yourself To People</div>
+          </div>
+        </div>
+      </div>
       <div id="download" class="section-download">download</div>
       <div id="guide" class="section-guide">guide</div>
       <div id="service" class="section-service">service</div>
