swiper slide example

--- a/index.html
+++ b/index.html
@@ -41,10 +41,50 @@
   <body>
     <div class="swiper-top">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"></div>
-        <div class="swiper-slide"></div>
-        <div class="swiper-slide"></div>
+        <!-- HOME -->
+        <div id="home" class="swiper-slide">
+          <div class="main-content">home</div>
+        </div>
+        <!-- DOWNLOAD -->
+        <div id="download" class="swiper-slide">
+          <div class="main-content">download</div>
+        </div>
+        <!-- Middle swiper -->
+        <div class="swiper-slide">
+          <div class="swiper-middle">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="main-content">middle container 1</div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-content">middle container 2</div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-bottom">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <div class="main-content">bottom container 1</div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="main-content">bottom container 2</div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="main-content">bottom container 3</div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="main-content">bottom container 4</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
+  <!-- <script src="./src/js/haeder.js"></script>
+  <script src="./src/js/text.animation.js"></script>
+  <script src="./src/js/guide.horizen.scroll.js"></script> -->
+  <script src="./src/js/init.js"></script>
 </html>
