--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./src/css/guide.css" />
     <link rel="stylesheet" href="./src/css/animation/guide.css" />
     <link rel="stylesheet" href="./src/css/service.css" />
+    <link rel="stylesheet" href="./src/css/blog.css" />
     <link
       rel="stylesheet"
       href="./src/css/animation/section-down-load-text.css"
@@ -35,11 +36,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!-- <script src="./src/js/jquery.smooth.wheel.js"></script> -->
     <script src="./util/jQuery-easeScroll/jquery.easeScroll.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </head>
   <body>
     <div class="header">
@@ -129,9 +125,9 @@
             </div>
           </div>
         </div>
-        <div id="guide" class="section-guide swiper">
-          <div class="section-guide-intro-container swiper-wrapper">
-            <div class="guide-intro-title swiper-slide">
+        <div id="guide" class="section-guide">
+          <div class="section-guide-intro-container">
+            <div class="guide-intro-title">
               <div class="shine-img">
                 <img src="./assets/se03_shine.png" alt="" width="170" />
               </div>
@@ -160,8 +156,8 @@
                 </div>
               </div>
             </div>
-            <div class="section-guide-content-container swiper-slide"></div>
           </div>
+          <div class="section-guide-content-container"></div>
         </div>
         <div id="service" class="section-service">service</div>
         <div id="blog" class="section-blog">blog</div>
