--- a/index-test.html
+++ b/index-test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/test.css">
+    <link rel="stylesheet" href="./src/css/test.css">
     <title>horizontal scrolling test 01</title>
   </head>
   <body>
@@ -25,6 +25,6 @@
     </div>
   </div>
   <div style="height: 100vh; width: 100vw;""></div> <!--Extra Scroll Space-->
-  <script src="/src/js/test.js" ></script>
+  <script src="./src/js/test.js" ></script>
   </body>
 </html>
