--- a/index.html
+++ b/index.html
@@ -125,39 +125,41 @@
             </div>
           </div>
         </div>
-        <div id="guide" class="section-guide">
-          <div class="section-guide-intro-container">
-            <div class="guide-intro-title">
-              <div class="shine-img">
-                <img src="./assets/se03_shine.png" alt="" width="170" />
-              </div>
-              <img src="./assets/se03_TEXT.png" alt="" width="800" />
-              <h2>My data platform</h2>
-              <div class="guide-scrolling-animation-container">
-                <span> Keep scrolling ▶ </span>
-                <span> Keep scrolling ▶ </span>
-                <span> Keep scrolling ▶ </span>
-                <span> Keep scrolling ▶ </span>
-                <span> Keep scrolling ▶ </span>
-                <span> Keep scrolling ▶ </span>
-              </div>
-            </div>
-            <div class="guide-intro-img swiper-slide">
-              <img src="./assets/se03_IMG01.jpg" alt="" width="1400" />
-              <div class="guide-intro-img-text-container">
-                <div class="text-01">
-                  <span class="text-01-01">After </span>
-                  <span class="text-01-02">purchasinng,</span>
+        <div class="sticky-parent">
+          <div id="guide" class="section-guide sticky">
+            <div class="section-guide-intro-container">
+              <div class="guide-intro-title">
+                <div class="shine-img">
+                  <img src="./assets/se03_shine.png" alt="" width="170" />
                 </div>
-                <div class="text-02">Data Archiving</div>
-                <div class="text-03">
-                  <span class="text-03-01">on</span>
-                  <span class="text-03-02">LIST UP</span>
+                <img src="./assets/se03_TEXT.png" alt="" width="800" />
+                <h2>My data platform</h2>
+                <div class="guide-scrolling-animation-container">
+                  <span> Keep scrolling ▶ </span>
+                  <span> Keep scrolling ▶ </span>
+                  <span> Keep scrolling ▶ </span>
+                  <span> Keep scrolling ▶ </span>
+                  <span> Keep scrolling ▶ </span>
+                  <span> Keep scrolling ▶ </span>
                 </div>
               </div>
+              <div class="guide-intro-img">
+                <img src="./assets/se03_IMG01.jpg" alt="" width="1400" />
+                <div class="guide-intro-img-text-container">
+                  <div class="text-01">
+                    <span class="text-01-01">After </span>
+                    <span class="text-01-02">purchasinng,</span>
+                  </div>
+                  <div class="text-02">Data Archiving</div>
+                  <div class="text-03">
+                    <span class="text-03-01">on</span>
+                    <span class="text-03-02">LIST UP</span>
+                  </div>
+                </div>
+              </div>
+              <div class="section-guide-content-container"></div>
             </div>
           </div>
-          <div class="section-guide-content-container"></div>
         </div>
         <div id="service" class="section-service">service</div>
         <div id="blog" class="section-blog">blog</div>
