guide intro text effect

--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
               </div>
             </div>
             <div class="guide-intro-img">
-              <img src="./assets/se03_IMG01.jpg" alt="" width="1400" />
               <div class="guide-intro-img-text-container">
                 <div class="text-01">
                   <span class="text-01-01">After </span>
@@ -155,8 +154,27 @@
                   <span class="text-03-02">LIST UP</span>
                 </div>
               </div>
+              <div class="guide-intro-background">
+                <!-- <img src="./assets/se03_IMG01.jpg" alt="" width="1400" /> -->
+                <div class="guide-intro-img-text-container">
+                  <div class="text-01">
+                    <span class="text-01-01">After </span>
+                    <span class="text-01-02">purchasinng,</span>
+                  </div>
+                  <div class="text-02">Data Archiving</div>
+                  <div class="text-03">
+                    <span class="text-03-01">on</span>
+                    <span class="text-03-02">LIST UP</span>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="section-guide-content-container"></div>
+            <div class="section-guide-content-container">
+              <div class="intro-box"></div>
+              <div class="intro-box"></div>
+              <div class="intro-box"></div>
+              <div class="intro-box"></div>
+            </div>
           </div>
         </div>
       </div>
