section guide background fix

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
       <div class="sticky-parent">
         <div id="guide" class="section-guide sticky">
           <div class="section-guide-intro-container">
+            <div class="black-box"></div>
             <div class="guide-intro-title">
               <div class="shine-img">
                 <img src="./assets/se03_shine.png" alt="" width="170" />
